ziprealty.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;realestate",
  "char_count": 13835,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.58,
  "homepage_snapshot_redirected_domain": "ziprealty.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060403001827id_/http://www.ziprealty.com/index.jsp",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402222653id_/http%3A//ziprealty.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ziprealty.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615014739id_/http%3A//www.ziprealty.com/footer_pages/privacy.jsp",
  "policy_title": "Privacy - ZipRealty Real Estate",
  "policy_url": "ziprealty.com/footer_pages/privacy.jsp",
  "sha1": "d93bd99a706509536f2641a2cb5f66a06b904bb7",
  "simhash": 13392017715346665634,
  "simhash_updated": true,
  "site_hostname": "ziprealty.com",
  "site_url": "http://ziprealty.com",
  "smog": 15.25,
  "strict_updated": true,
  "timestamp": "20060615014739",
  "word_count": 2247,
  "year": 2006
}

--- a/z/zi/zip/ziprealty.com.html
+++ b/z/zi/zip/ziprealty.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ziprealty.com privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223073055id_/http%3A//www.ziprealty.com/footer_pages/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ziprealty.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014739id_/http%3A//www.ziprealty.com/footer_pages/privacy.jsp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy - ZipRealty Real Estate</title>
@@ -23,12 +23,12 @@ if(self != top) { top.location.href=self.location.href; }
  
   
 <img src="/images/spc.gif" width="1" height="5"><br>
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<table width="100%" cellspacing="0" cellpadding="0">
  <tbody><tr>
  <td width="50%">
  <img src="/images/spc.gif" width="1" height="1"><br>
  </td>
- <td width="766" colspan="8">
+ <td width="766" colspan="10">
  <img src="/images/spc.gif" width="766" height="1"><br>
  </td>
  <td width="50%">
@@ -40,16 +40,13 @@ if(self != top) { top.location.href=self.location.href; }
  <img src="/images/spc.gif" width="1" height="1"><br>
  </td>
  <td rowspan="2" width="182" valign="bottom" align="center" class="navBottomTD">
- <a target="_top" href="http://www.ziprealty.com"><img border="0" src="/images/homepage/zip_logo_horiz_w182.gif" width="182" height="50" alt="ZipRealty Real Estate -- Homes for Sale and Local REALTORS" title="ZipRealty Real Estate -- Homes for Sale and Local REALTORS"></a><br>
+ <a target="_top" href="http://www.ziprealty.com"><img src="/images/homepage/zip_logo_horiz_w182.gif" width="182" height="50" alt="ZipRealty Real Estate -- Homes for Sale and Local REALTORS" title="ZipRealty Real Estate -- Homes for Sale and Local REALTORS"></a><br>
  <img src="/images/spc.gif" width="1" height="5"><br>
  </td>
  <td rowspan="2" width="10" class="navBottomTD">
  <img src="/images/spc.gif" width="10" height="1"><br>
  </td>
- <td colspan="6" align="right">
-
- <font style="font-size:xx-small;"><a href="http://www.ziprealty.com/footer_pages/locale.jsp?locale=es&amp;cKey=j2k9bb2m&amp;back=http%3A%2F%2Fwww.ziprealty.com%2Ffooter_pages%2Fprivacy.jsp">En Español</a></font>&nbsp; <b>|</b> &nbsp;
-
+ <td colspan="8" align="right">
  <b>
  Call toll free: 1.800 CALL ZIP<br>
  </b>
@@ -59,41 +56,37 @@ if(self != top) { top.location.href=self.location.href; }
  </td>
  </tr>
  <tr>
- <td width="158" valign="bottom" align="center" onclick="window.location = 'http://www.ziprealty.com/buy_a_home/index.jsp';">
- <table width="100%" border="0" cellspacing="0" cellpadding="0">
- <tbody><tr>
- <td align="center" class="navTabOffTD">
- <a target="_top" href="http://www.ziprealty.com/buy_a_home/index.jsp" class="navTabOffA">Buy a Home</a><br>
- </td>
- </tr>
- </tbody></table>
+ <td width="158" valign="bottom" align="center">
+ <div class="navTabOffTD">
+ <a target="_top" href="http://www.ziprealty.com/buy_a_home/index.jsp">Buy a Home</a>
+ </div>
  </td>
  <td width="2" class="navBottomTD">
  <img src="/images/spc.gif" width="2" height="1"><br>
  </td>
- <td width="158" valign="bottom" align="center" onclick="window.location = 'http://www.ziprealty.com/sell_my_house/index.jsp';">
- <table width="100%" border="0" cellspacing="0" cellpadding="0">
- <tbody><tr>
- <td align="center" class="navTabOffTD">
- <a target="_top" href="http://www.ziprealty.com/sell_my_house/index.jsp" class="navTabOffA">Sell Your House</a><br>
- </td>
- </tr>
- </tbody></table>
+ <td width="158" valign="bottom" align="center">
+ <div class="navTabOffTD">
+ <a target="_top" href="http://www.ziprealty.com/sell_my_house/index.jsp">Sell Your House</a>
+ </div>
  </td>
  <td width="2" class="navBottomTD">
  <img src="/images/spc.gif" width="2" height="1"><br>
  </td>
- <td width="158" valign="bottom" align="center" onclick="window.location = 'http://www.ziprealty.com/find/index.jsp';">
- <table width="100%" border="0" cellspacing="0" cellpadding="0">
- <tbody><tr>
- <td align="center" class="navTabOffTD">
- <a target="_top" href="http://www.ziprealty.com/find/index.jsp" class="navTabOffA">Find an Agent</a><br>
+ <td width="158" valign="bottom" align="center">
+ <div class="navTabOffTD">
+ <a target="_top" href="http://www.ziprealty.com/resource_center/index.jsp">Resources</a>
+ </div>
  </td>
- </tr>
- </tbody></table>
+ <td width="2" class="navBottomTD">
+ <img src="/images/spc.gif" width="2" height="1"><br>
  </td>
- <td align="right" valign="bottom" width="98" class="navBottomTD">
- <img src="/images/homepage/realtor_logo_23x26.gif" width="23" height="26" hspace="12" border="0" align="absbottom">
+ <td width="158" valign="bottom" align="center">
+ <div class="navTabOffTD">
+ <a target="_top" href="http://www.ziprealty.com/find/index.jsp">Find an Agent</a>
+ </div>
+ </td>
+ <td align="right" valign="bottom" width="98" class="navBottomTD" nowrap="">
+ <img src="/images/homepage/realtor_logo_23x26.gif" width="23" height="26" hspace="12" align="absbottom">
  
  <font style="font-size: xx-small"><a class="blue" href="http://www.ziprealty.com/log_in/index.jsp">Sign In</a></font><br>
  <img src="/images/spc.gif" width="1" height="4"><br>
@@ -101,12 +94,13 @@ if(self != top) { top.location.href=self.location.href; }
  </td>
  </tr>
  <tr>
- <td colspan="10" bgcolor="#688A92">
+ <td colspan="12" bgcolor="#688A92">
  <img src="/images/spc.gif" width="1" height="4"><br>
  </td>
  </tr>
 </tbody></table>
  
+
 <center>
 <img src="/images/spc.gif" width="1" height="10"><br>
 <table width="725" border="0" cellspacing="0" cellpadding="0">
@@ -181,7 +175,7 @@ Your ZipRealty account can be deleted or de-activated at any time by contacting 
 <br><br>
 <a name="user2"></a>
 <b>User access and ability to update information.</b><br>
-You may edit your preferences and the information you have provided at any time by sending email to <a href="mailto:team@ziprealty.com">team@ZipRealty.com</a> or mail to ZipRealty, Inc., 2000 Powell Street, Suite 1555, Emeryville, CA 94608. You may also visit <a href="http://www.ziprealty.com">www.ZipRealty.com</a>. You will need your Login ID and Password to access your account information online. If you have lost your password, you may request a new one by sending an email to <a href="mailto:team@ziprealty.com">team@ZipRealty.com</a>. You may also contact your Agent to edit the information you provide to ZipRealty.
+You may edit your preferences and the information you have provided at any time by sending email to <a href="mailto:team@ziprealty.com">team@ZipRealty.com</a> or mail to ZipRealty, Inc., 2000 Powell Street, Suite 300, Emeryville, CA 94608. You may also visit <a href="http://www.ziprealty.com">www.ZipRealty.com</a>. You will need your Login ID and Password to access your account information online. If you have lost your password, you may request a new one by sending an email to <a href="mailto:team@ziprealty.com">team@ZipRealty.com</a>. You may also contact your Agent to edit the information you provide to ZipRealty.
 <br><br>
 <a name="security"></a>
 <b>Security measures used to protect personally identifiable information.</b><br>
@@ -210,29 +204,34 @@ If you have any questions regarding this privacy policy, or privacy issues in ge
 
 <table cellpadding="0" cellspacing="0">
  <tbody><tr>
- <td align="center" style="padding-bottom: 15px;">
+ <td align="center" style="padding-bottom: 15px;" nowrap="">
  <font style="font-size:xx-small;">
- <nobr>
-
  <a class="footer_link" href="http://www.ziprealty.com/about_zip/contact_us.jsp">Contact Us</a> |
  <a class="footer_link" href="https://signup.cj.com/signup/brandedPublisherSignUp.do?air_refmerchantid=937877">Affiliates Program</a> |
  <a class="footer_link" href="http://www.ziprealty.com/footer_pages/privacy.jsp">Privacy</a> |
  <a class="footer_link" href="http://www.ziprealty.com/footer_pages/licenses.jsp">Licenses</a> |
  <a class="footer_link" href="http://www.ziprealty.com/footer_pages/fair_housing.jsp">Fair Housing</a> |
- <a class="footer_link" href="http://www.ziprealty.com/footer_pages/disclaimer.jsp">Disclaimer</a>
- </nobr><br>
- <nobr>
- <a class="footer_link" href="http://www.ziprealty.com/footer_pages/terms_of_use.jsp">Terms of Use</a> |
+ <a class="footer_link" href="http://www.ziprealty.com/footer_pages/disclaimer.jsp">Disclaimer</a> |
+ <a class="footer_link" href="http://www.ziprealty.com/rss/feed_list.jsp">RSS Feeds</a> |
+ <a class="footer_link" href="http://www.zipagent.com/recruit/index.jsp">Careers</a><br>
+ <a class="footer_link" href="javascript:newwin('http://www.ziprealty.com/feedback/index.jsp',600,450)">Suggestions</a> |
  <a class="footer_link" href="javascript:newwin('http://www.ziprealty.com/feedback/index.jsp',600,450)">Feedback</a> |
+ <a class="footer_link" href="http://www.ziprealty.com/footer_pages/terms_of_use.jsp">Terms of Use</a> |
  <a class="footer_link" href="http://www.ziprealty.com/buy_a_home/satisfaction_guarantee.jsp">Service Guarantee</a> |
  <a class="footer_link" href="http://phx.corporate-ir.net/phoenix.zhtml?c=180169&amp;p=irol-irhome">Investor Relations</a> |
- <a class="footer_link" href="http://www.ziprealty.com/about_zip/leadership/index.jsp">Management</a>
-
- | <a class="footer_link" href="http://www.ziprealty.com/footer_pages/locale.jsp?locale=es&amp;cKey=db9nqzx1&amp;back=http%3A%2F%2Fwww.ziprealty.com%2Ffooter_pages%2Fprivacy.jsp">En Español</a>
-
- </nobr>
- <br>
- Copyright 1999-2005 and Patent Pending, ZipRealty, Inc. All rights reserved.<br>
+ <a class="footer_link" href="http://www.ziprealty.com/about_zip/leadership/index.jsp">Management</a> |
+ <a class="footer_link" href="http://www.ziprealty.com/footer_pages/site_map.jsp">Site Map</a><br>
+ <img src="/images/spc.gif" width="1" height="20"><br>
+ Languages:&nbsp;
+ 
+ In English
+ 
+ | <a class="footer_link" href="http://www.ziprealty.com/footer_pages/locale.jsp?locale=es&amp;cKey=64843z6l&amp;back=http%3A%2F%2Fwww.ziprealty.com%2Ffooter_pages%2Fprivacy.jsp">En Español</a>
+ 
+ | <a class="footer_link" href="http://www.ziprealty.com/footer_pages/locale.jsp?locale=zh&amp;cKey=lbh2zt3k&amp;back=http%3A%2F%2Fwww.ziprealty.com%2Ffooter_pages%2Fprivacy.jsp"><img src="/images/global/in_chinese.gif" width="50" height="17" alt="Chinese" border="0" align="absbottom"></a><br>
+ 
+ <img src="/images/spc.gif" width="1" height="20"><br>
+ Copyright 1999-2006 and Patent Pending, ZipRealty, Inc. All rights reserved.<br>
  </font>
  <img src="/images/spc.gif" width="1" height="10"><br>
  
@@ -242,7 +241,16 @@ If you have any questions regarding this privacy policy, or privacy issues in ge
  </tr>
 </tbody></table>
 </center>
+   
+<script language="JavaScript" type="text/javascript" src="http://www.ziprealty.com/js/s_code_prod.js"></script>
 
+<script language="JavaScript" type="text/javascript"><!--
+/* SiteCatalyst Variables */
+s.pageName=""
+  
+/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
+var s_code=s.t();if(s_code)document.write(s_code)//--></script>
+ 
 
 </center>
 
