--- a/g/gl/glo/globalscape.com.html
+++ b/g/gl/glo/globalscape.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the globalscape.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228064901id_/http%3A//www.globalscape.com/company/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the globalscape.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014748id_/http%3A//globalscape.com/company/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 		<title>GlobalSCAPE - Privacy Policy</title>
@@ -9,65 +9,35 @@
 
 <script language="JavaScript" src="/assets/css/script.js"></script>
 <script language="JavaScript" src="/assets/css/cookie.js"></script>
+<script type="text/javascript" src="/assets/css/flashobject.js"></script>
 
 	<!-- Begin Google Website Analytics -->
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 	
 	<script type="text/javascript">
-		_uacct = "UA-85092-1";
+		_uacct = "UA-216026-1";
 		urchinTracker();	
 	</script> 	
 	<!-- End Google Website Analytics -->
 
+	
+
 <!-- End Page Tracking -->
+
+<!-- Begin Javascript Menu Fix -->
+<script language="javascript">
+ var formPage 
+ //on pages where a select box interferes with the javascript menus, this value is set to true 
+ formPage = false 
+</script>
+<!-- End Javascript Menu Fix -->
+
+
+
 		
 	</head>
 	<body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" bgcolor="white">
 	
-<!--BEGINNING OF DEEPMETRIX STATSCRIPT-->
-<script language="javascript">
-var DMdomain = "";
-var DMpage = window.location;
-var DMpagestr = DMpage.toString();
-if ( -1 == DMpagestr.toLowerCase().indexOf(".globalscape.") ) {
-	var DMre = /(^[^\/]+\/\/[^\.]+\.)([^\.]+)(\.\w{2,3}.*$)/gi;
-	var DMarr = DMre.exec( DMpagestr );
-	if ( null != DMarr )
-	{
-		DMpagestr = DMarr[1] + "globalscape" + DMarr[3];
-	}
-}
-var DMVersion = 86;
-var DMsendTo = "//collector.deepmetrix.com/dm.gif?";
-var DMsession;
-function dmerr(){return true;}window.onerror=dmerr;
-var u3k8u6y1j3 = new Date();
-if (navigator.userAgent.indexOf('Mac') >= 0 && u3k8u6y1j3.getTimezoneOffset() >= 720){
-u3k8u6y1j3.setTime (u3k8u6y1j3.getTime() - 1440*60*1000);}
-var u3k8u6y1 = location.protocol+DMsendTo+"v="+DMVersion+"&vst=1";
-var u3k8u6 = document.cookie.toString();if(u3k8u6.indexOf("_dmid") == -1)
-{DMsession = parseInt( Math.random()*1000000 ) + "_" + u3k8u6y1j3.getTime();
-var u3k8 = "";if(DMdomain != ""){u3k8 = "domain="+ DMdomain +";";}
-document.cookie = "_dmid=" + DMsession + ";expires=Mon, 31-Dec-2008 00:00:00 GMT;"+u3k8+"path=/;";}
-u3k8u6 = document.cookie.toString();if(u3k8u6.indexOf('_dmid') == -1){DMsession = "";}
-else{if(u3k8u6.indexOf(';') == -1){u3k8u6 = u3k8u6.replace(/_dm/g, ';_dm');}var u3 = u3k8u6.indexOf("_dmid=") + 6;
-var g5b1z7i5z6 = u3k8u6.indexOf(";",u3);if (g5b1z7i5z6 == -1){g5b1z7i5z6 = u3k8u6.length;}
-DMsession = unescape(u3k8u6.substring(u3,g5b1z7i5z6));}
-u3k8u6y1 += "&id="+DMsession+"&url="+escape(DMpagestr) + "&ref="+escape(document.referrer)+"&lng=" +
-((!document.all || navigator.userAgent.match('Opera')) ? navigator.language : navigator.userLanguage) +
-"&tz=" + (Math.round(new Date('dec 1, 2002').getTimezoneOffset()/60)*-1);
-if(screen){u3k8u6y1 += "&scr=" + escape( screen.width + "x" + screen.height + " " + screen.colorDepth + "bpp" );}
-u3k8u6y1 += "&rnd=" + new Date().getTime();if(document.layers){
-document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1+"\" height=1 width=1></la"+"yer>");
-}else{document.write("<di"+
-"v id=\"DMStats\" STYLE=\"position:absolute;visibility:hidden;\"><img src=\""+u3k8u6y1+
-"\" height=1 width=1></di"+"v>");}
-</script><div id="DMStats" style="position:absolute;visibility:hidden;"><img src="https://collector.deepmetrix.com/dm.gif?v=86&amp;vst=1&amp;id=&amp;url=https%3A//web.archive.org/web/20051228064901id_/http%253A//www.globalscape.com/company/privacy.asp&amp;ref=&amp;lng=en-US&amp;tz=0&amp;scr=800x600%2024bpp&amp;rnd=1580422925510" height="1" width="1"></div>
-
-<!--END OF DEEPMETRIX STATSCRIPT-->
-
-
-
 <!-- begin header -->
 
 
@@ -212,10 +182,11 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 <a href="/company/contact.asp">Contact Us</a> &nbsp;|&nbsp;
 <a href="/company/trademarks.asp">Trademarks</a> &nbsp;|&nbsp;
 
-<a href="" onclick="setMenuCookie(&quot;GS_Menus&quot;, &quot;Off&quot;, 0)">Top Menus Off</a>
+<a href="" onclick="setMenuCookie(&quot;GS_Menus&quot;, &quot;Off&quot;, 0)">Top Menus Off</a> &nbsp;|&nbsp;
 
+<a href="http://www.globalscape.com/company/press.xml" title="Subscribe to our news releases" target="_blank"><img src="/assets/images/icons/rssfeed_sm.gif" style="margin-bottom: -3;" border="0"></a>
 <br>
-©2005 GlobalSCAPE Texas LP. GlobalSCAPE stock is quoted under the symbol OTCBB: GSCP.<br>
+©2006 GlobalSCAPE Texas LP. GlobalSCAPE stock is quoted under the symbol OTCBB: GSCP.<br>
 <font color="#ff9900"><b>1-800-290-5054</b></font>&nbsp;(US or Canada)&nbsp;|&nbsp;<font color="#ff9900"><b>1-210-308-8267</b></font>&nbsp;(International)
 </div>
 
@@ -225,8 +196,7 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 <div id="menu1" class="menu" style="top:64;left:150;">
 <span class="topnavExtended"><a href="/products/ftp_clients.asp" onmouseover="document.getElementById('menu1b').style.visibility='hidden'; showMenu('menu1a', this.id);" onmouseout="hideMenu();">FTP Clients</a></span>
 <span class="topnavExtended"><a href="/products/ftp_servers.asp" onmouseover="document.getElementById('menu1a').style.visibility='hidden'; showMenu('menu1b', this.id);" onmouseout="hideMenu();">File Transfer Servers</a></span>
-<span class="topnavExtended"><a href="/smtp/" onmouseover="document.getElementById('menu1b').style.visibility='hidden'; showMenu('menu1c', this.id);" onmouseout="hideMenu();">Email Security</a></span>
-<span class="topnavExtended"><a href="/products/cms.asp" onmouseover="document.getElementById('menu1c').style.visibility='hidden'; showMenu('menu1d', this.id);" onmouseout="hideMenu();">Web Content Management</a></span>
+<span class="topnavExtended"><a href="/cms/" onmouseover="document.getElementById('menu1b').style.visibility='hidden'; showMenu('menu1d', this.id);" onmouseout="hideMenu();">Web Content Management</a></span>
 <span class="topnavExtended"><a href="/products/webdev.asp" onmouseover="document.getElementById('menu1d').style.visibility='hidden'; showMenu('menu1e', this.id);" onmouseout="hideMenu();">Web Development</a></span>
 <span class="topnav"><a href="/products/index.asp" onmouseover="document.getElementById('menu1e').style.visibility='hidden'; resetTimer();" onmouseout="hideMenu();">All Products</a></span>
 </div>
@@ -245,24 +215,18 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 		<div id="menu1b" class="menu" style="top:91;left:320;">
 		<span class="topnav"><a href="/eft/" onmouseover="resetTimer();" onmouseout="hideMenu();">EFT Server</a></span>
 		<span class="topnav"><a href="/gsftps/" onmouseover="resetTimer();" onmouseout="hideMenu();">Secure FTP Server</a></span>
-		<span class="topnav"><a href="/geotrust/" onmouseover="resetTimer();" onmouseout="hideMenu();">SSL Certificates</a></span>
 		</div>
 		<!-- end menu 1b -->
 		
-		<!-- begin menu 1c -->
-		<div id="menu1c" class="menu" style="top:118;left:320;">
-		<span class="topnav"><a href="/smtp/" onmouseover="resetTimer();" onmouseout="hideMenu();">Secure SMTP Gateway</a></span>
-		</div>
-		<!-- end menu 1c -->		
 
 		<!-- begin menu 1d -->
-		<div id="menu1d" class="menu" style="top:145;left:320;">
-		<span class="topnav"><a href="/publishxml/" onmouseover="resetTimer();" onmouseout="hideMenu();">PublishXML</a></span>
+		<div id="menu1d" class="menu" style="top:118;left:320;">
+		<span class="topnav"><a href="/cms/" onmouseover="resetTimer();" onmouseout="hideMenu();">Cascade Server</a></span>
 		</div>
 		<!-- end menu 1d -->
 
 		<!-- begin menu 1e -->
-		<div id="menu1e" class="menu" style="top:172;left:320;">
+		<div id="menu1e" class="menu" style="top:145;left:320;">
 		<span class="topnav"><a href="/websurvey/" onmouseover="resetTimer();" onmouseout="hideMenu();">Web Survey</a></span>
 		<span class="topnav"><a href="/cutesitebuilder/" onmouseover="resetTimer();" onmouseout="hideMenu();">CuteSITE Builder</a></span>
 		<span class="topnav"><a href="/cutehtmlpro/" onmouseover="resetTimer();" onmouseout="hideMenu();">CuteHTML Pro</a></span>
@@ -294,12 +258,12 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 <!-- begin menu 4 -->
 <div id="menu4" class="menu" style="left:500;">
 <span class="topnav"><a href="/support/index.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">Help Center</a></span>
-<span class="topnav"><a href="http://forums.globalscape.com" onmouseover="resetTimer();" onmouseout="hideMenu();">Support Forum</a></span>
+<span class="topnav"><a href="http://forums.globalscape.com" onmouseover="resetTimer();" onmouseout="hideMenu();">User Forum</a></span>
+<span class="topnav"><a href="http://kb.globalscape.com" onmouseover="resetTimer();" onmouseout="hideMenu();">Knowledge Base</a></span>
 <span class="topnav"><a href="/support/lostserial.asp" onmouseover="document.getElementById('menu4a').style.visibility='hidden'; resetTimer();" onmouseout="hideMenu();">Lost Serial Number</a></span>
 <span class="topnavExtended"><a href="/support/index.asp" onmouseover="document.getElementById('menu4b').style.visibility='hidden'; showMenu('menu4a', this.id);" onmouseout="hideMenu();">FTP Clients</a></span>
 <span class="topnavExtended"><a href="/support/index.asp" onmouseover="document.getElementById('menu4a').style.visibility='hidden'; showMenu('menu4b', this.id);" onmouseout="hideMenu();">File Transfer Servers</a></span>
-<span class="topnavExtended"><a href="/support/index.asp" onmouseover="document.getElementById('menu4b').style.visibility='hidden'; showMenu('menu4c', this.id);" onmouseout="hideMenu();">Email Security</a></span>
-<span class="topnavExtended"><a href="/support/index.asp" onmouseover="document.getElementById('menu4c').style.visibility='hidden'; showMenu('menu4d', this.id);" onmouseout="hideMenu();">Web Content Management</a></span>
+<span class="topnavExtended"><a href="/support/index.asp" onmouseover="document.getElementById('menu4b').style.visibility='hidden'; showMenu('menu4d', this.id);" onmouseout="hideMenu();">Web Content Management</a></span>
 <span class="topnavExtended"><a href="/support/index.asp" onmouseover="document.getElementById('menu4d').style.visibility='hidden'; showMenu('menu4e', this.id);" onmouseout="hideMenu();">Web Development</a></span>
 
 </div>
@@ -307,7 +271,7 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 
 
 		<!-- begin menu 4a -->
-		<div id="menu4a" class="menu" style="top:145;left:671;">
+		<div id="menu4a" class="menu" style="top:172;left:671;">
 		<span class="topnav"><a href="/support/pro.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">CuteFTP Professional</a></span>
 		<span class="topnav"><a href="/support/ftp.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">CuteFTP Home</a></span>
 		<span class="topnav"><a href="/support/mac.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">CuteFTP Mac Professional</a></span>
@@ -316,22 +280,17 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 		<!-- end menu 4a -->
 
 		<!-- begin menu 4b -->
-		<div id="menu4b" class="menu" style="top:172;left:671;">
+		<div id="menu4b" class="menu" style="top:199;left:671;">
 		<span class="topnav"><a href="/support/eft.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">EFT Server</a></span>
 		<span class="topnav"><a href="/support/srv.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">Secure FTP Server</a></span>
 		<span class="topnav"><a href="/support/csh.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">Home FTP Server</a></span>
 		</div>
 		<!-- end menu 4b -->
 		
-		<!-- begin menu 4c -->
-		<div id="menu4c" class="menu" style="top:199;left:671;">
-		<span class="topnav"><a href="/support/smtp.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">Secure SMTP Gateway</a></span>
-		</div>
-		<!-- end menu 4c -->		
 
 		<!-- begin menu 4d -->
 		<div id="menu4d" class="menu" style="top:226;left:671;">
-		<span class="topnav"><a href="/support/xml.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">PublishXML</a></span>
+		<span class="topnav"><a href="/support/xml.asp" onmouseover="resetTimer();" onmouseout="hideMenu();">Cascade Server/PublishXML</a></span>
 		</div>
 		<!-- end menu 4d -->
 
