--- a/s/se/sec/sec.gov.html
+++ b/s/se/sec/sec.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sec.gov privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212155831id_/http%3A//sec.gov/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sec.gov privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014937id_/http%3A//www.sec.gov/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0
 Transitional//EN"><html lang="ENG"><head>
