--- a/w/wi/win/windowssecrets.com.html
+++ b/w/wi/win/windowssecrets.com.html
@@ -1,32 +1,44 @@
-<!--The following is the downloaded HTML source of the windowssecrets.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216161249id_/http%3A//windowssecrets.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the windowssecrets.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015037id_/http%3A//windowssecrets.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+	 <link rel="SHORTCUT ICON" href="/favicon.ico"> 
     <title>
       Windows Secrets  | Privacy Page    </title>
-    <meta name="description" content="Windows Secrets is a twice-monthly e-mail newsletter with the latest tips and tricks on Microsoft Windows.">
-    <meta name="keywords" content="brian livingston, windows secrets, windows tips, brian's buzz, window manager, livingston">
+   <meta name="description" content="The Windows Secrets Newsletter brings you essential tricks of running Microsoft Windows XP, Vista, Internet Explorer, Firefox, Windows Update, and more — twice a month, free.">
+   <meta name="keywords" content="Windows Secrets, XP, Vista, Internet Explorer, Firefox, Windows Update">
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
     <meta name="robots" content="nofollow, noindex">
     <link rel="stylesheet" href="/style.css" type="text/css">
   </head>
-  <body bgcolor="#ffffff" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
-    <table cellspacing="0" width="634" cellpadding="0" border="0" style="margin-left:0px;">
-      <tbody><tr>
-        <td width="196" align="right" valign="bottom" bgcolor="ffffff">
-          <font size="1" color="#000000" face="Verdana, Arial, Helvetica, Sans-serif"><a href="http://WindowsSecrets.com"><img src="/images/Windows-Secrets-Logo.jpg" width="196" height="121" title="Windows Secrets" alt="Windows Secrets" border="0"></a></font>
-        </td>
-        <td width="438" valign="bottom" bgcolor="ffffff">
-          <span style="font-family: Arial, Helvetica, sans-serif; font-size: 13px;">
-          <b>Get the latest high-tech tricks with a free
-          subscription to the Windows Secrets Newsletter.</b> <a href="http://WindowsSecrets.com/signup" class="more333">Click here for info</a><br><br><br></span><img src="/images/Newsletter-Logo.jpg" width="424" height="35" title="WindowsSecrets.com" alt="WindowsSecrets.com" border="0">
-        </td>
-      </tr>
-    </tbody></table>
-<table cellspacing="0" width="680" cellpadding="10" border="0" style="margin-left:10px;margin-top:10px">
-   <tbody><tr>
-      <td align="left" valign="top" bgcolor="#ffffff" width="546">
+ <body>
+		<table width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF"><tbody><tr><td width="746" style="margin-top:5px;">
+<table cellpadding="0" cellspacing="0" border="0" style="margin-left:0px;" bgcolor="white" summary="Windows Secrets Newsletter logo" width="100%">
 
+<tbody><tr>
+<td align="right" valign="bottom" bgcolor="white" width="196">
+<img src="http://www.WindowsSecrets.com/images/wsn/Windows-Secrets-Logo.jpg" width="196" height="121" title="Windows Secrets" alt="Windows Secrets" border="0">
+</td>
+
+<td align="right" valign="bottom" bgcolor="white" width="424">
+<font color="#666666" face="Verdana,Arial,Sans-serif" size="1">
+
+	<font color="#000000" face="Verdana,Arial,Sans-serif" size="1">
+	<b>Get the latest tricks with a free subscription<br>
+	to the Windows Secrets Newsletter.</b><br>
+	<a class="nwindow" href="http://WindowsSecrets.com/links/$IDd/0ac515h/?u=WindowsSecrets.com%2Finfo">Click here for info</a><br><br><br><br>
+
+	</font>
+
+<img src="http://www.WindowsSecrets.com/images/wsn/Newsletter-Logo.jpg" width="424" height="35" title="Newsletter" alt="Newsletter" border="0"></font>
+</td>
+
+<td valign="top">&nbsp;</td>
+</tr>
+</tbody></table>
+			<table cellspacing="0" width="100%" cellpadding="0" border="0">
+   <tbody><tr>
+      <td align="left" valign="top" bgcolor="#ffffff" width="480" style="padding-left:14px;padding-top:20px">
 <h1>Our Ironclad Privacy Policy</h1>
 
 <div class="t2">
@@ -156,7 +168,7 @@ send postal mail to WindowsSecrets.com, 300 Queen Anne Ave. N. #456, Seattle, WA
 
 </td>
 <!--RIGHT CELL-->
-        <td width="220" valign="top"><p class="smalltext"><b>Windows Secrets is a twice-monthly newsletter that brings you the latest tricks of running
+	<td width="210" valign="top" style="padding-left:10px;padding-top:20px;padding-right:10px;"><p class="smalltext"><b>Windows Secrets is a twice-monthly newsletter that brings you the latest tricks of running
 Microsoft Windows.</b><br></p>
 
 <h6>WINDOWS&nbsp;SECRETS NEWSLETTER</h6>
@@ -166,9 +178,9 @@ Microsoft Windows.</b><br></p>
 <div class="sidelinks">
 <a href="http://WindowsSecrets.com/" class="sidelinks">Home</a><br>
 <a href="http://WindowsSecrets.com/signup/" class="sidelinks">How to subscribe</a><br>
-<a href="http://WindowsSecrets.com/prefs/?a=cP" class="sidelinks">Change&nbsp;your&nbsp;delivery&nbsp;address</a><br>
+<a href="http://WindowsSecrets.com/prefs/?a=cP" class="sidelinks">Change&nbsp;delivery&nbsp;address</a><br>
 <a href="http://WindowsSecrets.com/prefs/" class="sidelinks">Change your preferences</a><br>
-<a href="http://WindowsSecrets.com/reviews/" class="sidelinks">Index of Reviews</a><br>
+<a href="http://WindowsSecrets.com/reviews/" class="sidelinks">Reviews Overviews</a><br>
 <a href="http://WindowsSecrets.com/pastissues" class="sidelinks">Access past free issues</a><br>
 <a href="http://WindowsSecrets.com/access" class="sidelinks">Access past paid issues</a><br>
 <a href="http://WindowsSecrets.com/upgrade/" class="sidelinks">Upgrade to paid version</a><br>
@@ -179,11 +191,11 @@ Microsoft Windows.</b><br></p>
 <a href="http://WindowsSecrets.com/unsubscribe" class="sidelinks">How to unsubscribe</a><br>
 <a href="http://WindowsSecrets.com/privacy/" class="sidelinks">Privacy policy</a><br><br>
 </div>
+	</div></td>
 
-</div></td>
-</tr>
+	<td>&nbsp;</td>
+	</tr>
 </tbody></table>
 
 
-
-</body></html>
+</td></tr></tbody></table></body></html>
