web-source.net (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 8130,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.51,
  "homepage_snapshot_redirected_domain": "web-source.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402222616id_/http://web-source.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402222616id_/http%3A//web-source.net",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "web-source.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615015102id_/http%3A//web-source.net/privacy.htm",
  "policy_title": "Web-Source.net Privacy Policy",
  "policy_url": "web-source.net/privacy.htm",
  "sha1": "f00ed4b403af8ca8c457a0b3ad87cc82a4ac3120",
  "simhash": 9669076557503891634,
  "simhash_updated": false,
  "site_hostname": "web-source.net",
  "site_url": "http://web-source.net",
  "smog": 15.47,
  "strict_updated": false,
  "timestamp": "20060615015102",
  "word_count": 1323,
  "year": 2006
}

--- a/w/we/web/web-source.net.html
+++ b/w/we/web/web-source.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the web-source.net privacy policy that was archived on 2005-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051221040617id_/http%3A//web-source.net/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the web-source.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015102id_/http%3A//web-source.net/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
   <meta name="KEYWORDS" content="keywords">
@@ -64,13 +64,13 @@ A:hover { color:#EF7171; text-decoration: none; }
 		<td>
 		  <input type="TEXT" name="terms" size="20" value="Search Terms"></td>
 		<td>
-		  <select name="boolean"> 
-		  <option>any terms 
-		  </option><option>all terms 
+		  <select name="boolean">
+		  <option>any terms
+		  </option><option>all terms
 		  </option><option>as a phrase</option></select></td>
 		<td>
-		  <select name="case"> 
-		  <option>insensitive 
+		  <select name="case">
+		  <option>insensitive
 		  </option><option>sensitive</option></select></td>
 		<td>
 		  <input type="image" name="search" src="http://www.web-source.net/graphics/search.gif" border="0"></td>
@@ -130,7 +130,7 @@ A:hover { color:#EF7171; text-decoration: none; }
 	      </p><center>
 		<table border="0" cellspacing="0" cellpadding="6" width="100%" bordercolor="#336699">
 		  <tbody><tr valign="Top">
-		    <td width="75%"><font face="Verdana,Helvetica" size="2"> Last Updated: January
+		    <td width="75%"><span name="KonaBody"><font face="Verdana,Helvetica" size="2"> Last Updated: January
 		      1, 2004 <br>
 		      <br>
 		      Web-Source.net strives to offer its visitors the many advantages of Internet
@@ -280,7 +280,7 @@ A:hover { color:#EF7171; text-decoration: none; }
 		      party.<br>
 		      </font>
 		      <p>
-		    </p></td>
+		    </p></span></td>
 		  </tr>
 		</tbody></table>
 		<p>
@@ -295,5 +295,9 @@ A:hover { color:#EF7171; text-decoration: none; }
     </tr>
   </tbody></table>
 </p></center>
-
+<!-- DynamiContext AdLinks  -->
+<script language="JavaScript"> var dc_UnitID = 14; var dc_PublisherID = 2222;
+var dc_AdLinkColor = 'green'; var dc_adprod='ADL'; </script>
+<script language="JavaScript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js"></script>
+<!-- DynamiContext AdLinks  -->
 </body></html>
