grab.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 13646,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.13,
  "homepage_snapshot_redirected_domain": "grab.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402213016id_/http://grab.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402213016id_/http%3A//grab.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "grab.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615015120id_/http%3A//www.grab.com/site/%3Fpage%3Dprivacypolicy",
  "policy_title": "Grab.com",
  "policy_url": "grab.com/site/?page=privacypolicy",
  "sha1": "e025042a1c04b539dd01f9fc6715ab16e5199f05",
  "simhash": 2039626572120655803,
  "simhash_updated": false,
  "site_hostname": "grab.com",
  "site_url": "http://grab.com",
  "smog": 15.2,
  "strict_updated": false,
  "timestamp": "20060615015120",
  "word_count": 2122,
  "year": 2006
}

--- a/g/gr/gra/grab.com.html
+++ b/g/gr/gra/grab.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the grab.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213084444id_/http%3A//www.grab.com/site/%3Fpage%3Dprivacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the grab.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015120id_/http%3A//www.grab.com/site/%3Fpage%3Dprivacypolicy) for the most accurate reproduction.-->
 
 <html><head><script type="text/javascript" language="Javascript" src="/__utm.js"></script>
 
@@ -19,7 +19,6 @@
 </head>
 <body>
 
-
 <table width="761" border="0" cellspacing="0" cellpadding="0" class="hdrb">
   <tbody><tr>
     <td width="173" rowspan="2" valign="bottom">
@@ -27,7 +26,7 @@
 	<td align="right">
 	<table cellpadding="0" cellspacing="0" border="0" width="100%" class="krm">
 		<tbody><tr>
-			<td class="krmt" width="272" valign="top" align="right" style="padding:2px 10px 0px 0px;">Users online: 5,192</td>
+			<td class="krmt" width="272" valign="top" align="right" style="padding:2px 10px 0px 0px;">Users online: 11,002</td>
 			<td align="right">
 				<table border="0" cellspacing="0" cellpadding="2" class="krm">
 			      <tbody><tr>
@@ -45,19 +44,19 @@
     <td valign="bottom" align="right" height="27">
 		<table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr align="right">
-          <td background="http://i.grab.com/images/home/header/tab_bak.gif"><img src="http://i.grab.com/images/home/header/tab_bak.gif" border="0" width="3" height="27"></td>
-		  <td background="http://i.grab.com/images/home/header/tab_bak.gif" width="80"><a href="http://www.grab.com/"><img src="http://i.grab.com/images/home/header/tab_home.gif" border="0" width="80" height="27"></a></td>
-		  <td width="3"><img src="http://i.grab.com/images/home/header/tab_bak.gif" border="0" width="3" height="27"></td>
-		  <td width="80"><a href="http://www.grab.com/fun/"><img src="http://i.grab.com/images/home/header/tab_fun.gif" border="0" width="80" height="27"></a></td>
-		  <td width="3"><img src="http://i.grab.com/images/home/header/tab_bak.gif" border="0" width="3" height="27"></td>
-		  <td width="80"><a href="http://www.grab.com/games/"><img src="http://i.grab.com/images/home/header/tab_games.gif" border="0" width="80" height="27"></a></td>
-		  <td width="3"><img src="http://i.grab.com/images/home/header/tab_bak.gif" border="0" width="3" height="27"></td>
-		  <td width="80"><a href="http://www.grab.com/movies/"><img src="http://i.grab.com/images/home/header/tab_movies.gif" border="0" width="80" height="27"></a></td>
-		  <td width="3"><img src="http://i.grab.com/images/home/header/tab_bak.gif" border="0" width="3" height="27"></td>
-		  <td width="80"><a href="http://www.grab.com/community/"><img src="http://i.grab.com/images/home/header/tab_com.gif" border="0" width="80" height="27"></a></td>
-		  <td width="3"><img src="http://i.grab.com/images/home/header/tab_bak.gif" border="0" width="3" height="27"></td>
-		  <td width="80"><a href="http://www.grab.com/account/"><img src="http://i.grab.com/images/home/header/tab_prof.gif" border="0" width="80" height="27"></a></td>
-		  <td width="11" background="http://i.grab.com/images/home/header/tab_bak.gif" border="0"><img src="http://i.grab.com/images/home/header/tab_bak.gif" width="3" height="27"></td>
+          <td background="http://i.grab.com/images/home/header/tab_bak1.gif"><img src="http://i.grab.com/images/home/header/tab_bak1.gif" border="0" width="3" height="27"></td>
+		  <td background="http://i.grab.com/images/home/header/tab_bak1.gif" width="80"><a href="http://www.grab.com/"><img src="http://i.grab.com/images/home/header/tab_home1.gif" border="0" width="90" height="27"></a></td>
+		  <td width="3"><img src="http://i.grab.com/images/home/header/tab_bak1.gif" border="0" width="3" height="27"></td>
+	
+		  <td width="80"><a href="http://www.grab.com/games/"><img src="http://i.grab.com/images/home/header/tab_games1.gif" border="0" width="90" height="27"></a></td>
+		  <td width="3"><img src="http://i.grab.com/images/home/header/tab_bak1.gif" border="0" width="3" height="27"></td>
+
+		  <td width="80"><a href="http://www.grab.com/community/"><img src="http://i.grab.com/images/home/header/tab_com1.gif" border="0" width="90" height="27"></a></td>
+		  <td width="3"><img src="http://i.grab.com/images/home/header/tab_bak1.gif" border="0" width="3" height="27"></td>
+		  <td width="80"><a href="http://www.grab.com/allstars/"><img src="http://i.grab.com/images/home/header/tab_allstars1.gif" border="0" width="90" height="27"></a></td>
+		  <td width="3"><img src="http://i.grab.com/images/home/header/tab_bak1.gif" border="0" width="3" height="27"></td>
+		  <td width="80"><a href="http://www.grab.com/account/"><img src="http://i.grab.com/images/home/header/tab_prof1.gif" border="0" width="90" height="27"></a></td>
+		  <td width="11" background="http://i.grab.com/images/home/header/tab_bak1.gif" border="0"><img src="http://i.grab.com/images/home/header/tab_bak1.gif" width="3" height="27"></td>
         </tr>
     </tbody></table></td>
   </tr>
@@ -65,12 +64,10 @@
 <table width="762" border="0" cellspacing="0" cellpadding="0" class="snvb" style="border-right:1px solid #004A80;">
   <tbody><tr><form id="searchForm" name="searchForm" method="get" onsubmit="getSearchAction();" action="http://www.grab.com/search.php"></form>
     <td valign="middle" class="c14 txt11" width="250">&nbsp;<select name="which" class="snvtbx">
-    <option selected="" value="http://www.grab.com/search.php" style="font-weight:bold;">All content</option>
-    <option value="http://www.grab.com/movies/search/">&nbsp;&nbsp;&nbsp;Movies</option>
-    <option value="http://www.grab.com/fun/search/">&nbsp;&nbsp;&nbsp;Fun toons</option>
-    <option value="http://www.grab.com/games/search/">&nbsp;&nbsp;&nbsp;Games</option>
-    <option value="http://wannas.grab.com/wanna_search.aspx" style="font-weight:bold;">I Wanna...</option>
-    <option value="http://www.grab.com/browse/search/" style="font-weight:bold;">All users</option>
+ 
+    <option value="http://www.grab.com/games/search/">Games</option>
+    <option value="http://wannas.grab.com/wanna_search.aspx">I Wanna...</option>
+    <option value="http://www.grab.com/browse/search/">All users</option>
 </select>
 <input type="text" name="search" value="" size="5" maxlength="255" class="snvtbx">
 <input type="image" src="http://i.grab.com/images/home/body/green_btn_search.gif" width="49" height="15" name="btn" value="Search" align="middle" style="padding-bottom:3px;">
@@ -153,8 +150,8 @@ function karmaPop() {
 	<tbody><tr>
 		<td align="center">
 			<div id="leaderdiv" name="leaderdiv" style="margin: 2px 0px 2px 0px; width:728px; height:90px;" align="center">
-			<iframe width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000" src="http://deLB.imixserver.com/html.ng/site=grab&amp;affiliate=www.grab.com&amp;partner=No&amp;mixpage=hp&amp;placement=leaderboard&amp;hub=home&amp;random=1134463484">
-			     <SCRIPT LANGUAGE="JavaScript1.1" SRC="http://deLB.imixserver.com/js.ng/Params.richmedia=yes&site=grab&affiliate=www.grab.com&partner=No&mixpage=hp&placement=leaderboard&hub=home&random=1134463484"></SCRIPT> 
+			<iframe width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000" src="http://deLB.imixserver.com/html.ng/site=grab&amp;affiliate=www.grab.com&amp;partner=No&amp;mixpage=hp&amp;placement=leaderboard&amp;hub=home&amp;random=1150336280">
+			     <SCRIPT LANGUAGE="JavaScript1.1" SRC="http://deLB.imixserver.com/js.ng/Params.richmedia=yes&site=grab&affiliate=www.grab.com&partner=No&mixpage=hp&placement=leaderboard&hub=home&random=1150336280"></SCRIPT> 
 			</iframe>
 			</div>
 			<div id="leaderdivg" name="leaderdivg" style="margin: 2px 0 2px 0; width: 728; height:90; background-color:gainsboro; display:none;" align="center">&nbsp;</div>
