--- a/g/gl/gla/glamour-videos.com.html
+++ b/g/gl/gla/glamour-videos.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the glamour-videos.com privacy policy that was archived on 2005-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051225083335id_/http%3A//glamour-videos.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the glamour-videos.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015316id_/http%3A//www.glamour-videos.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
