marylandtaxes.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance;education",
  "char_count": 2892,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.76,
  "homepage_snapshot_redirected_domain": "marylandtaxes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060408225437id_/http://marylandtaxes.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060408225437id_/http%3A//marylandtaxes.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "marylandtaxes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615015342id_/http%3A//marylandtaxes.com/main/privacy.asp",
  "policy_title": "Welcome to the Comptroller of Maryland's Homepage",
  "policy_url": "marylandtaxes.com/main/privacy.asp",
  "sha1": "1ec9753bb029f04acb270c722339dd6d22ae7322",
  "simhash": 2132750010316986558,
  "simhash_updated": false,
  "site_hostname": "marylandtaxes.com",
  "site_url": "http://marylandtaxes.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615015342",
  "word_count": 475,
  "year": 2006
}

--- a/m/ma/mar/marylandtaxes.com.html
+++ b/m/ma/mar/marylandtaxes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marylandtaxes.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231153433id_/http%3A//www.marylandtaxes.com/main/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marylandtaxes.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015342id_/http%3A//marylandtaxes.com/main/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -154,9 +154,9 @@ function seek1SetCols(v) {
 <img height="1" alt="" src="/glmedia/1ptrans.gif" width="11" border="0">
 <a href="http://individuals.marylandtaxes.com/filinginfo/efile.asp">e-File Income Taxes</a><br>
 <img height="1" alt="" src="/glmedia/1ptrans.gif" width="11" border="0">
-<a href="http://individuals.marylandtaxes.com/taxforms/default.asp">Personal Taxes</a><br>
+<a href="http://individuals.marylandtaxes.com/taxforms/05forms.asp">Personal Taxes</a><br>
 <img height="1" alt="" src="/glmedia/1ptrans.gif" width="11" border="0">
-<a href="http://business.marylandtaxes.com/taxforms/default.asp">Business Taxes</a><br>
+<a href="http://business.marylandtaxes.com/taxforms/05forms.asp">Business Taxes</a><br>
 <img height="1" alt=" " src="/glmedia/1ptrans.gif" width="11" border="0">
 <a href="https://interactive.marylandtaxes.com/webapps/comptrollercra/entrance.asp">Business Registration</a><br>
 <br>
@@ -332,7 +332,7 @@ function seek1SetCols(v) {
 <br><hr color="#cccccc" size="1" noshade="">
 
 <br>
-©2004 Comptroller of Maryland. All rights reserved.<br><a href="/main/privacy.asp">Privacy Policy</a> | <a href="/main/email.asp">Give us your feedback</a><br>
+©2006 Comptroller of Maryland. All rights reserved.<br><a href="/main/privacy.asp">Privacy Policy</a> | <a href="/main/email.asp">Give us your feedback</a><br>
 <img height="10" alt="" src="/glmedia/1ptrans.gif" width="1" border="0">
 </font></td>
 </tr>
