--- a/e/ex/exa/exabytes.com.html
+++ b/e/ex/exa/exabytes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the exabytes.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212044235id_/http%3A//www.exabytes.com/about/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the exabytes.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015345id_/http%3A//exabytes.com/about/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Exabytes // Legal Information // Privacy Policy</title>
@@ -201,6 +201,13 @@
 		<div class="reset"><!-- --></div>
 
 </div>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-148020-2";
+urchinTracker();
+</script>
 
 
 
