--- a/p/pl/pla/planetmirror.com.html
+++ b/p/pl/pla/planetmirror.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the planetmirror.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231020610id_/http%3A//public.planetmirror.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the planetmirror.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015504id_/http%3A//public.planetmirror.com/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>PlanetMirror - Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="keywords" content="Linux,games,downloads,software,patches,demos,applications">
-<meta name="description" content="Planet Mirror is a free software download archive.">
+<meta name="keywords" content="Linux,games,downloads,software,patches,demos,applications,open source">
+<meta name="description" content="Planet Mirror is a free software download archive. ">
 <link rel="stylesheet" href="http://planetmirror.com/themes/standard/pm.css" type="text/css">
 </head>
 
@@ -35,10 +35,10 @@
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://saboteur.planetmirror.com/phpadsnew/adjs.php?n=250475545&amp;what=zone:5&amp;source=frontpage&amp;exclude=,"></script><noscript><a href='http://saboteur.planetmirror.com/phpadsnew/adclick.php?n=a07590f1' target='_blank'><img src='http://saboteur.planetmirror.com/phpadsnew/adview.php?what=zone:5&amp;source=frontpage&amp;n=a07590f1' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://saboteur.planetmirror.com/phpadsnew/adjs.php?n=072028846&amp;what=zone:5&amp;source=frontpage&amp;exclude=,"></script><noscript><a href='http://saboteur.planetmirror.com/phpadsnew/adclick.php?n=a07590f1' target='_blank'><img src='http://saboteur.planetmirror.com/phpadsnew/adview.php?what=zone:5&amp;source=frontpage&amp;n=a07590f1' border='0' alt=''></a></noscript>
 </td>
     <td width="100" bgcolor="#6699FF" align="left">
-<a href="/pub/&amp;fl=1">0-9</a> <a href="/pub/&amp;fl=a">A</a> <a href="/pub/&amp;fl=b">B</a> <a href="/pub/&amp;fl=c">C</a> <a href="/pub/&amp;fl=d">D</a> <a href="/pub/&amp;fl=e">E</a> <a href="/pub/&amp;fl=f">F</a> <a href="/pub/&amp;fl=g">G</a> <a href="/pub/&amp;fl=h">H</a> <a href="/pub/&amp;fl=i">I</a> <a href="/pub/&amp;fl=j">J</a> <a href="/pub/&amp;fl=k">K</a> <a href="/pub/&amp;fl=l">L</a> <a href="/pub/&amp;fl=m">M</a> <a href="/pub/&amp;fl=n">N</a> <a href="/pub/&amp;fl=o">O</a> <a href="/pub/&amp;fl=p">P</a> <a href="/pub/&amp;fl=q">Q</a> <a href="/pub/&amp;fl=r">R</a> <a href="/pub/&amp;fl=s">S</a> <a href="/pub/&amp;fl=t">T</a> <a href="/pub/&amp;fl=u">U</a> <a href="/pub/&amp;fl=v">V</a> <a href="/pub/&amp;fl=w">W</a> <a href="/pub/&amp;fl=x">X</a> <a href="/pub/&amp;fl=y">Y</a> <a href="/pub/&amp;fl=z">Z</a> 
+<a href="/pub/?fl=1">0-9</a> <a href="/pub/?fl=a">A</a> <a href="/pub/?fl=b">B</a> <a href="/pub/?fl=c">C</a> <a href="/pub/?fl=d">D</a> <a href="/pub/?fl=e">E</a> <a href="/pub/?fl=f">F</a> <a href="/pub/?fl=g">G</a> <a href="/pub/?fl=h">H</a> <a href="/pub/?fl=i">I</a> <a href="/pub/?fl=j">J</a> <a href="/pub/?fl=k">K</a> <a href="/pub/?fl=l">L</a> <a href="/pub/?fl=m">M</a> <a href="/pub/?fl=n">N</a> <a href="/pub/?fl=o">O</a> <a href="/pub/?fl=p">P</a> <a href="/pub/?fl=q">Q</a> <a href="/pub/?fl=r">R</a> <a href="/pub/?fl=s">S</a> <a href="/pub/?fl=t">T</a> <a href="/pub/?fl=u">U</a> <a href="/pub/?fl=v">V</a> <a href="/pub/?fl=w">W</a> <a href="/pub/?fl=x">X</a> <a href="/pub/?fl=y">Y</a> <a href="/pub/?fl=z">Z</a> 
     </td>
     <td bgcolor="#6699FF" width="10"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="10" border="0"></td>
   </tr>
@@ -54,7 +54,7 @@
 <table border="0" cellpadding="0" cellspacing="0" width="100%" align="center">
   <tbody><tr class="pm-menucell">
     <td align="left" class="pm-menucell">
-	<p><font class="pm-menu">&nbsp;&nbsp;31st Dec 2005</font></p>
+	<p><font class="pm-menu">&nbsp;&nbsp;15th Jun 2006</font></p>
     </td>
     <td align="center" class="pm-menucell"> 
 	<!-- ed by evan 19 dec -->
@@ -62,6 +62,7 @@
       <p><font class="pm-menu">
 	  <a class="pm-menu" href="/">Home</a>&nbsp;|&nbsp;
 	  <a class="pm-menu" href="/news/">News</a>&nbsp;|&nbsp;
+	  <a class="pm-menu" href="http://directory.planetmirror.com" target="_blank">Directory</a>&nbsp;|&nbsp;
 	  <a class="pm-menu" href="/members/register/">Register</a>&nbsp;|&nbsp;
 	  <!--
 	  <a class='pm-menu' href='/members/'>members</a>&nbsp;|&nbsp;
@@ -74,7 +75,7 @@
 	  <a href="/advertising/" class="pm-menu">Advertising</a>&nbsp;|&nbsp;
 	  <a href="/top100/" class="pm-menu">Top 100</a>&nbsp;|&nbsp;
 
-	  <a href="/vhost/" class="pm-menu">Hosting</a>
+	  <a href="/interns/" class="pm-menu">Jobs</a>
 	  
 	  </font></p>
     </td>
@@ -219,7 +220,7 @@ We understand that the privacy of your personal details is important to you, so 
 
               <tr> 
                 <td bgcolor="#003399" height="14" width="1"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="14"></td>
-                <td width="158" class="pm-panelbody" align="center">Not a member? <a href="https://secure.planetmirror.com/members/register/">REGISTER!</a></td>
+                <td width="158" class="pm-panelbody" align="center">Membership is FREE!<p><a href="https://secure.planetmirror.com/members/register/">REGISTER HERE</a></p></td>
                 <td height="14" width="1" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="14"></td>
               </tr>
 
@@ -267,106 +268,28 @@ We understand that the privacy of your personal details is important to you, so 
                     </tr>
 
 </tbody></table>
+<script language="JavaScript" type="text/javascript" src="http://saboteur.planetmirror.com/phpadsnew/adx.js"></script>
+<script language="JavaScript" type="text/javascript">
+<!--
+   if (!document.phpAds_used) document.phpAds_used = ',';
+   phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
+   
+   document.write ("<" + "script language='JavaScript' type='text/javascript' src='");
+   document.write ("http://saboteur.planetmirror.com/phpadsnew/adjs.php?n=" + phpAds_random);
+   document.write ("&amp;what=zone:6&amp;source=frontpage");
+   document.write ("&amp;exclude=" + document.phpAds_used);
+   if (document.referrer)
+      document.write ("&amp;referer=" + escape(document.referrer));
+   document.write ("'><" + "/script>");
+//-->
+</script><script language="JavaScript" type="text/javascript" src="http://saboteur.planetmirror.com/phpadsnew/adjs.php?n=854880421&amp;what=zone:6&amp;source=frontpage&amp;exclude=,"></script><noscript><a href='http://saboteur.planetmirror.com/phpadsnew/adclick.php?n=a61e29c4' target='_blank'><img src='http://saboteur.planetmirror.com/phpadsnew/adview.php?what=zone:6&amp;source=frontpage&amp;n=a61e29c4' border='0' alt=''></a></noscript>
 
-
-<table width="160" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr bgcolor="#003399"> 
-<td colspan="3" height="1"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt=""></td>
-</tr>
-<tr> 
-<td bgcolor="#003399" width="1"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1"></td>
-<td colspan="1" bgcolor="#6699FF" class="pm-panelhead" valign="middle"><img src="http://planetmirror.com/themes/standard/images/pm-button.gif" width="20" height="20" alt="" align="top">&nbsp;PM Statistics</td>
-<td bgcolor="#003399" width="1"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1"></td>
-</tr>
-<tr bgcolor="#003399"> 
-<td colspan="3" height="1"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt=""></td>
-</tr>
-
-
-<tr>
-
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="158" height="5" bgcolor="#FFFFFF"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-</tr>
-
-
-              <tr> 
-                <td bgcolor="#003399" width="1"><img src="/themes/standard/images/spacer.gif" alt="" width="1"></td>
-                <td class="pm-panelbody" valign="top" align="center">On average, PlanetMirror serves <b>900,000</b> files per day.</td>
-                <td width="1" bgcolor="#003399"><img src="/themes/standard/images/spacer.gif" alt="" width="1"></td>
-              </tr>
-
-<tr>
-
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="158" height="5" bgcolor="#FFFFFF"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-</tr>
-
-
-<tr bgcolor="#003399"> 
-<td colspan="3" height="1"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt=""></td>
-</tr>
-
-<tr>
-
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="158" height="5" bgcolor="#FFFFFF"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-</tr>
-
-
-              <tr> 
-                <td bgcolor="#003399" width="1"><img src="/themes/standard/images/spacer.gif" alt="" width="1"></td>
-                <td class="pm-panelbody" valign="top" align="center">On average, PlanetMirror serves over <b>2,000,000 MB (2TB)</b> to users every day.</td>
-                <td width="1" bgcolor="#003399"><img src="/themes/standard/images/spacer.gif" alt="" width="1"></td>
-              </tr>
-
-<tr>
-
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="158" height="5" bgcolor="#FFFFFF"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-</tr>
-
-
-<tr bgcolor="#003399"> 
-<td colspan="3" height="1"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt=""></td>
-</tr>
-
-<tr>
-
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="158" height="5" bgcolor="#FFFFFF"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-</tr>
-
-
-              <tr> 
-                <td bgcolor="#003399" width="1"><img src="/themes/standard/images/spacer.gif" alt="" width="1"></td>
-                <td class="pm-panelbody" valign="top" align="center">Since June 2002, we've served a total of <b>7,270,269,870 MB</b></td>
-                <td width="1" bgcolor="#003399"><img src="/themes/standard/images/spacer.gif" alt="" width="1"></td>
-              </tr>
-
-<tr>
-
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="158" height="5" bgcolor="#FFFFFF"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-<td width="1" height="5" bgcolor="#003399"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" width="1" height="5"></td>
-</tr>
-
-
-
-<tr bgcolor="#003399"> 
-<td colspan="3" height="1"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt=""></td>
-</tr>
-
-                    <tr> 
-                      <td colspan="3" height="10" bgcolor="#FFFFFF"><img src="http://planetmirror.com/themes/standard/images/spacer.gif" alt="" height="10"></td>
-                    </tr>
-
-</tbody></table>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-238201-1";
+urchinTracker();
+</script>
 
           </td>
         </tr>
