--- a/w/we/wed/wedj.com.html
+++ b/w/we/wed/wedj.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wedj.com privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229200526id_/http%3A//www.wedj.com/wedjcom.nsf/privacy.html%21OpenPage) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wedj.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015547id_/http%3A//wedj.com/wedjcom.nsf/privacy.html%21OpenPage) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>WeDJ.com</title><!--Disc jockey Photography Videography wedding music listings starts here-->
@@ -93,7 +93,7 @@ email: <script language="JavaScript" type="text/javascript">var l="wedj.com";doc
 phone: 309.494.9858<br>
 <!-- Footer for disc jockey services | photographers | videographers begins here -->
 </p></div></div><br><div align="center" class="playground_footer"><a href="/wedjcom.nsf/index.html!OpenPage" id="footer_menu_dj_home_1_1_1_1_1" title="Thousands of djs, photographers, and videographers at wedj.com">home</a> | <a href="/wedjcom.nsf/sitemap!OpenPage" id="footer_menu_dj_sitemap_1_1_1_1_1" title="Site Map contains a majority of links on our website.">site map</a> | <a href="/wedjcom.nsf/advertise!OpenPage" id="footer_menu_dj_advertising_1_1_1_1_1" title="Advertise your DJ, Photographer, or Videographer service with us today!">advertising</a> | <a href="/wedjcom.nsf/joinInfo!OpenPage" id="footer_menu_dj_getlisted_1_1_1_1_1" title="Put your dj service, photography studio, or videography company online today for free!">Get Listed!</a> | <a href="http://start.wedj.com" id="footer_menu_dj_vendors_1_1_1_1_1" title="Visit our Start Center to modify your listing and get peer help.">vendors</a> | <a href="/wedjcom.nsf/privacy.html!OpenPage" id="footer_menu_dj_privacy_1_1_1_1_1" title="We don't SPAM - view our privacy policy for details!">privacy policy</a> | <a href="http://startcenter.wedj.com/contact.php" id="footer_menu_dj_contact_1_1_1_1_1" title="Have a question about a dj, photographer, or videographer?  Contact us for a quick response!">contact us</a><br>
-Copyright © 1998 - 2005, WeDJ.com <script language="javascript"><!--
+Copyright © 1998 - 2006, WeDJ.com <script language="javascript"><!--
 var r=""+escape(top.document.referrer);
 tag="<IMG src=\"http://www.wedj.com/webtrack.nsf/trackit?openagent&ref="+r+"\" border=0 height=5 width=5>";
 document.write(tag); //--></script><img src="http://www.wedj.com/webtrack.nsf/trackit?openagent&amp;ref=" border="0" height="5" width="5"><noscript>
